--- a/about.html
+++ b/about.html
@@ -454,7 +454,7 @@ Offline ও Online—উভয় সুবিধা</p>
             </div> <!-- row -->
         </div> <!-- container -->
     </section>
-
+-->
     
     <!--====== TEACHERS PART ENDS ======-->
    
@@ -593,8 +593,9 @@ Offline ও Online—উভয় সুবিধা</p>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li
                                <!-- <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
-                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li>
+                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li> -->
                             </ul>
+                           <!--
                             <ul>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Gallery</a></li>
                                 <li><a href="shop.html"><i class="fa fa-angle-right"></i>Shop</a></li>
@@ -602,6 +603,7 @@ Offline ও Online—উভয় সুবিধা</p>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Support</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
                             </ul>
+                           -->
                         </div> <!-- footer link -->
                     </div>
                        -->
