--- a/about.html
+++ b/about.html
@@ -592,8 +592,10 @@ Offline ও Online—উভয় সুবিধা</p>
                                 <li><a href="index-2.html"><i class="fa fa-angle-right"></i>Home</a></li>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li
-                               <!-- <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
-                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li> -->
+                               <!-- 
+                               <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
+                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li> 
+                               -->
                             </ul>
                            <!--
                             <ul>
