--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="header-opening-time text-lg-right text-center">
-                            <p>Opening Hours : Monday to Saturay - 8 Am to 5 Pm</p>
+                            <p>Opening Hours : Saturay to Thursday - 8 Am to 5 Pm</p>
                         </div>
                     </div>
                 </div> <!-- row -->
@@ -108,7 +108,7 @@
                                 </div>
                                 <div class="cont">
                                     <p>Need Help? call us free</p>
-                                    <span>321 325 5678</span>
+                                    <span>+88017 41 752602</span>
                                 </div>
                             </div>
                             <div class="button float-left">
@@ -135,15 +135,18 @@
                                 <ul class="navbar-nav mr-auto">
                                     <li class="nav-item">
                                         <a class="active" href="index-2.html">Home</a>
+                                       <!--
                                         <ul class="sub-menu">
                                             <li><a class="active" href="index-2.html">Home 01</a></li>
                                             <li><a href="index-3.html">Home 02</a></li>
                                             <li><a href="index-4.html">Home 03</a></li>
                                         </ul>
+                                       -->
                                     </li>
                                     <li class="nav-item">
                                         <a href="about.html">About us</a>
                                     </li>
+                                   <!--
                                     <li class="nav-item">
                                         <a href="courses.html">Courses</a>
                                         <ul class="sub-menu">
@@ -179,12 +182,15 @@
                                             <li><a href="shop-singel.html">Shop Singel</a></li>
                                         </ul>
                                     </li>
+                                   -->
                                     <li class="nav-item">
                                         <a href="contact.html">Contact</a>
+                                       <!--
                                         <ul class="sub-menu">
                                             <li><a href="contact.html">Contact Us</a></li>
                                             <li><a href="contact-2.html">Contact Us 2</a></li>
                                         </ul>
+                                       -->
                                     </li>
                                 </ul>
                             </div>
@@ -309,7 +315,7 @@
                                         <i class="fa fa-home"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>143 castle road 517 district, kiyev port south Canada</p>
+                                        <p>Mangalkot, Keshabpur, Jessore</p>
                                     </div>
                                 </div> <!-- singel address -->
                             </li>
@@ -319,8 +325,8 @@
                                         <i class="fa fa-phone"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>+3 123 456 789</p>
-                                        <p>+1 222 345 342</p>
+                                        <p>+8801741 752602</p>
+                                        <p>+8801303 585170</p>
                                     </div>
                                 </div> <!-- singel address -->
                             </li>
@@ -330,8 +336,8 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@yourmail.com</p>
-                                        <p>info@yourmail.com</p>
+                                        <p>edulectorinfo.com</p>
+                                        <p></p>
                                     </div>
                                 </div> <!-- singel address -->
                             </li>
@@ -358,7 +364,7 @@
                             <div class="logo">
                                 <a href="#"><img src="images/logo-2.png" alt="Logo"></a>
                             </div>
-                            <p>Gravida nibh vel velit auctor aliquetn quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate.</p>
+                            <p>EduLector-এ পড়াশোনা মানেই পরিকল্পিত ও ফলাফলমুখী শিক্ষা। অভিজ্ঞ শিক্ষকমণ্ডলী ও নিয়মিত মূল্যায়নের মাধ্যমে শিক্ষার্থীরা গড়ে তোলে আত্মবিশ্বাস, শৃঙ্খলা ও শেখার আগ্রহ।</p>
                             <ul class="mt-20">
                                 <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -375,10 +381,13 @@
                             <ul>
                                 <li><a href="index-2.html"><i class="fa fa-angle-right"></i>Home</a></li>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
-                                <li><a href="courses.html"><i class="fa fa-angle-right"></i>Courses</a></li>
+                                <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
+                               <!--
                                 <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
                                 <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li>
+                               -->
                             </ul>
+                           <!--
                             <ul>
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Gallery</a></li>
                                 <li><a href="shop.html"><i class="fa fa-angle-right"></i>Shop</a></li>
@@ -386,6 +395,7 @@
                                 <li><a href="#"><i class="fa fa-angle-right"></i>Support</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li>
                             </ul>
+                           -->
                         </div> <!-- footer link -->
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-6">
@@ -413,7 +423,7 @@
                                         <i class="fa fa-home"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>143 castle road 517 district, kiyev port south Canada</p>
+                                        <p>Mangalkot, Keshabpur, Jessore</p>
                                     </div>
                                 </li>
                                 <li>
@@ -421,7 +431,7 @@
                                         <i class="fa fa-phone"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>+3 123 456 789</p>
+                                        <p>+8801741 752602</p>
                                     </div>
                                 </li>
                                 <li>
@@ -429,7 +439,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>info@yourmail.com</p>
+                                        <p>edulectorinfo@gmail.com</p>
                                     </div>
                                 </li>
                             </ul>
@@ -444,7 +454,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="copyright text-md-left text-center pt-15">
-                            <p><a target="_blank" href="https://www.templateshub.net">Templates Hub</a> </p>
+                            <p><a target="_blank" href="https://www.loooooa.com">LoooooA</a> </p>
                         </div>
                     </div>
                     <div class="col-md-4">
