--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                                 </div>
                                 <div class="cont">
                                     <p>Need Help? call us free</p>
-                                    <span>+88017 41 752602</span>
+                                    <span>+8801741 752602</span>
                                 </div>
                             </div>
                             <div class="button float-left">
@@ -336,7 +336,7 @@
                                         <i class="fa fa-envelope-o"></i>
                                     </div>
                                     <div class="cont">
-                                        <p>edulectorinfo.com</p>
+                                        <p>edulectorinfo@gmail.com</p>
                                         <p></p>
                                     </div>
                                 </div> <!-- singel address -->
