--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="Edulector is a modern coaching centre offering future-focused learning for school, SSC, HSC and admission preparation.">
+    <meta name="description" content="EduLector একটি আধুনিক শিক্ষা প্রতিষ্ঠান যেখানে ক্লাস ৪–১২, SSC ও HSC শিক্ষার্থীদের জন্য অভিজ্ঞ শিক্ষক, অনলাইন-অফলাইন ক্লাস ও ফলাফলভিত্তিক পড়াশোনা প্রদান করা হয়।.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--====== Title ======-->
-    <title>Edulector – Future-Focused Learning | Coaching Centre</title>
+    <title>EduLector সম্পর্কে | অনলাইন ও অফলাইন শিক্ষার নির্ভরযোগ্য প্ল্যাটফর্ম</title>
 
     
     <!--====== Favicon Icon ======-->
@@ -592,10 +592,8 @@ Offline ও Online—উভয় সুবিধা</p>
                                 <li><a href="index-2.html"><i class="fa fa-angle-right"></i>Home</a></li>
                                 <li><a href="about.html"><i class="fa fa-angle-right"></i>About us</a></li>
                                 <li><a href="contact.html"><i class="fa fa-angle-right"></i>Contact</a></li
-                               <!-- 
-                               <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
-                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li> 
-                               -->
+                              <!-- <li><a href="blog.html"><i class="fa fa-angle-right"></i>News</a></li>
+                                <li><a href="events.html"><i class="fa fa-angle-right"></i>Event</a></li> -->
                             </ul>
                            <!--
                             <ul>
