--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     <!--====== Required meta tags ======-->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="">
+    <meta name="description" content="EduLector-এর সাথে যোগাযোগ করুন ভর্তি, কোর্স, অনলাইন ও অফলাইন ক্লাস সংক্রান্ত যেকোনো তথ্যের জন্য। আমরা আছি ২৪/৭ শিক্ষার্থী সহায়তায়।">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--====== Title ======-->
-    <title>Edubin - LMS Education HTML Template</title>
+    <title>যোগাযোগ করুন | EduLector – আপনার শিক্ষা সহযোগী</title>
     
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
